test/Syntax4.err
3: syntax error: word name expected!
	to 123 :x :y
	   ^
