test/Syntax4.logo
# negative syntax test 4: invalid word name in to

to 123 :x :y
	print 'nope
end